--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,7 @@ body {
   height: 15rem;
   padding: 2rem;
   border-radius: 0.5rem;
-  box-shadow: 3px 3px 8px 0px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 14px 20px -5px hsl(212deg 86% 40% / 13%);
   overflow: hidden;
 }
 .cards__item--title {
@@ -103,6 +103,48 @@ body {
   background-size: 4rem;
   background-position: bottom 2rem right 2rem;
 }
+@media only screen and (min-width: 800px) {
+  .container {
+    display: flex;
+    flex-direction: column;
+    width: 74rem;
+  }
+  .intro {
+    align-self: center;
+    width: 33rem;
+    height: 14rem;
+    margin: 0;
+  }
+  .intro__title {
+    font-size: 2rem;
+    line-height: 1.5;
+    padding-bottom: 1.5rem;
+  }
+  .cards {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    align-items: center;
+    justify-content: center;
+    gap: 0 1.5rem;
+  }
+  .supervisor {
+    grid-column: 1;
+    grid-row: 1 / 3;
+  }
+  .team {
+    grid-column: 2;
+    grid-row: 1;
+  }
+  .karma {
+    grid-column: 2;
+    grid-row: 2;
+  }
+  .calc {
+    grid-column: 3;
+    grid-row: 1 / 3;
+  }
+}
 /* FRONTENDMENTOR STYLES */
 .attribution {
   display: block;
@@ -110,12 +152,13 @@ body {
   bottom: 0;
   left: 0;
   width: 100%;
-  padding: 0.5rem;
-  background-color: hsl(228, 45%, 80%);
+  padding: 1rem 0.5rem;
+  color: var(--color-neutral-grayish-blue);
+  background-color: var(--color-neutral-dark-blue);
   font-size: 11px;
   text-align: center;
 }
 .attribution a {
-  color: hsl(228, 45%, 44%);
+  color: var(--color-primary-orange);
   font-weight: bold;
 }
